# deep-learning-practice

./: .gitignore  README.md  config.toml  experiment.toml  main.py  pipeline.toml  pyproject.toml
src/: builders.py  cli.py  config.py  dataset.py  eval.py  evaluator.py  experiment.py  models.py  pipeline.py  saver.py  train.py  trainer.py  utils.py
